test: refatoração dos testes de visualização de campeonato